--- a/src/pages/MainApp/Chat.css
+++ b/src/pages/MainApp/Chat.css
@@ -1,93 +1,92 @@
-.chat{
-    display:flex;
+.chat {
+    display: flex;
     flex-direction: column;
-    flex:0.65;
+    flex: 0.65;
 }
 
-.chat_header{
+.chat_header {
     display: flex;
-    padding:20px;
+    padding: 20px;
     align-items: center;
     border-bottom: 1px solid lightgray;
 }
 
-.chat_headerInfo{
-    flex:1;
+.chat_headerInfo {
+    flex: 1;
     padding-left: 20px;
 }
 
-.chat_headerInfo>h3{
+.chat_headerInfo>h3 {
     margin-bottom: 3px;
     font-weight: 500;
 }
 
-.chat_headerInfo>p{
+.chat_headerInfo>p {
     color: gray;
 }
 
-.chat_body{
-    flex:1;
-    background-image:url('../images/bg.png');
+.chat_body {
+    flex: 1;
+    background-image: url('../../images/bg.png');
     background-repeat: repeat;
     background-position: center;
     padding: 30px;
     overflow: scroll;
 }
 
-.chat_message{
-    position:relative;
+.chat_message {
+    position: relative;
     font-size: 18px;
     padding: 10px;
-    width:fit-content;
+    width: fit-content;
     border-radius: 10px;
-    background-color:#ffffff;
+    background-color: #ffffff;
     margin-bottom: 30px;
 }
 
-.chat_timestamp{
+.chat_timestamp {
     margin-left: 10px;
     font-size: xx-small;
 }
 
-.chat_name{
+.chat_name {
     position: absolute;
     top: -20px;
     font-weight: 800;
     font-size: small;
 }
 
-.chat_receiver{
+.chat_receiver {
     margin-left: auto;
     background-color: #dcf8c6;
 }
 
-.chat_footer{
-    display:flex;
+.chat_footer {
+    display: flex;
     justify-content: space-between;
     align-items: center;
     height: 62px;
     border-top: 1px solid lightgray;
 }
 
-.chat_footer>form{
-    flex:1;
-    display:flex;
+.chat_footer>form {
+    flex: 1;
+    display: flex;
 }
 
-.chat_footer>form>input{
-    flex:1;
+.chat_footer>form>input {
+    flex: 1;
     border-radius: 30px;
-    padding:10px;
-    border:none;
+    padding: 10px;
+    border: none;
     outline-width: 0;
 }
 
-.chat_footer>form>button{
-    display:none;
+.chat_footer>form>button {
+    display: none;
 }
 
-.chat_footer > .MuiSvgIcon-root{
+.chat_footer>.MuiSvgIcon-root {
     color: gray;
     padding: 10px;
 }
-
